--- a/backend/templates/domain.html
+++ b/backend/templates/domain.html
@@ -2,10 +2,10 @@
 <html>
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-                <meta name="keywords" content="Instaright articles by domains, instaright topics" />
-		<meta name="title" content="Instaright Categories and Topics"  />
+		<meta name="keywords" content="Instaright, articles, domains, instaright topics, {{ domain }} articles" />
+		<meta name="title" content="Instaright doman articles - {{ domain }}"  />
 		<meta name="fragment" content="!" />
-		<meta name="description" content="Instaright data from {{ domain }} - data by domains. Instaright provides easy per domain infromation discovery" />
+		<meta name="description" content="Discover, save and share trending stories from {{ domain }}" />
                 <link rel="stylesheet" type="text/css" href="../css/style.css" />
                 <!--script src="http://www.google.com/jsapi?key=AIzaSyDu78p4P0qEe3CTU4GssVBz_crZemld_eg" type="text/javascript" charset="utf-8"></script-->
 		<script type="text/javascript" src="/_ah/channel/jsapi"></script>
@@ -19,7 +19,7 @@
 		<!-- fancybox -->
 		<script type="text/javascript" src="/static/javascript/jquery.fancybox-1.3.4.pack.js"></script>
 		<link rel="stylesheet" href="/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-                <title>Instaright - SocialBookmarking and recommendation engine</title>
+		<title>Instaright domain articles  - { domain }</title>
 
                 <!-- google analytics -->
                 <script type="text/javascript">
@@ -176,6 +176,7 @@
                         			titleElement = document.createElement('a');
                         			titleElement.innerHTML = title;
 						titleElement.setAttribute('class', 'stream-article');
+						titleElement.setAttribute('rel', 'nofollow');
                                			titleElement.href = original_link;
                                			titleElement.title = title;
                         			titleElement.target="_new"
@@ -317,9 +318,9 @@
                         </div>
                         <div id="right_box_mid">
                                 <ul>
-                                        <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instapaper tools on twitter"/><a href="http://twitter.com/instaright">Twitter</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instapaper tools on facebook"/><a href="http://www.facebook.com/instaright">Facebook Page</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instapaper tools blog"/><a href="http://instaright.tumblr.com/">Blog</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instapaper tools on twitter"/><a rel="me" href="http://twitter.com/instaright">Twitter</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instapaper tools on facebook"/><a rel="me" href="http://www.facebook.com/instaright">Facebook Page</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instapaper tools blog"/><a rel="me" href="http://instaright.tumblr.com/">Blog</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Delicious Import">Delicious Importer</a></li>
                                 </ul>
                         </div>
